[gd_scene load_steps=10 format=3 uid="uid://drg5pm1k6ld8t"]

[ext_resource type="Script" path="res://scenes/menus/lobbyScreen.gd" id="1_lbtft"]
[ext_resource type="Texture2D" uid="uid://cgkos8bwq67wu" path="res://assets/player/profile/blue_profile.png" id="2_ihk4t"]
[ext_resource type="Texture2D" uid="uid://mk3qld0godyy" path="res://assets/player/profile/red_profile.png" id="2_kx7md"]
[ext_resource type="Texture2D" uid="uid://bdhnkp505082p" path="res://assets/player/profile/green_profile.png" id="4_1c4a4"]
[ext_resource type="Texture2D" uid="uid://dq5xctbqcq84t" path="res://assets/player/profile/yellow_profile.png" id="5_vkg7j"]
[ext_resource type="Texture2D" uid="uid://cbs8qi6nvy2xr" path="res://assets/player/profile/brown_profile.png" id="6_m5cw1"]
[ext_resource type="Texture2D" uid="uid://dng2v10pkki1d" path="res://assets/player/profile/orange_profile.png" id="7_osp55"]
[ext_resource type="Texture2D" uid="uid://df0q2posasfhl" path="res://assets/player/profile/purple_profile.png" id="8_f30wy"]
[ext_resource type="Texture2D" uid="uid://d1pi8hph0isx2" path="res://assets/player/profile/pink_profile.png" id="9_yay50"]

[node name="lobbyScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_lbtft")

[node name="Start" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Start"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Start" type="VBoxContainer" parent="Start/MarginContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Start/MarginContainer/Start"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="Label" type="Label" parent="Start/MarginContainer/Start/GridContainer"]
layout_mode = 2
text = "Name: "

[node name="User" type="LineEdit" parent="Start/MarginContainer/Start/GridContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 3
max_length = 20

[node name="ColorName" type="ColorPickerButton" parent="Start/MarginContainer/Start/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "A"
color = Color(1, 1, 1, 1)

[node name="Label2" type="Label" parent="Start/MarginContainer/Start/GridContainer"]
layout_mode = 2
text = "IP: "

[node name="IP" type="LineEdit" parent="Start/MarginContainer/Start/GridContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "127.0.0.1"

[node name="HBoxContainer" type="HBoxContainer" parent="Start/MarginContainer/Start"]
layout_mode = 2
alignment = 1

[node name="Host" type="Button" parent="Start/MarginContainer/Start/HBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="Join" type="Button" parent="Start/MarginContainer/Start/HBoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="Pending" type="MarginContainer" parent="."]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Pending"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="Play" type="Button" parent="Pending/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PLAY!!"

[node name="PanelContainer2" type="PanelContainer" parent="Pending"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Pending/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Pending" type="VBoxContainer" parent="Pending/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Label" type="Label" parent="Pending/PanelContainer2/MarginContainer/Pending"]
layout_mode = 2
text = "Players: "

[node name="PanelContainer" type="PanelContainer" parent="Pending/PanelContainer2/MarginContainer/Pending"]
layout_mode = 2

[node name="PlayersList" type="VBoxContainer" parent="Pending/PanelContainer2/MarginContainer/Pending/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Pending"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Pending/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Pending/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Select character"

[node name="OptionButton" type="OptionButton" parent="Pending/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 2
expand_icon = true
item_count = 8
popup/item_0/text = "Red"
popup/item_0/icon = ExtResource("2_kx7md")
popup/item_0/id = 0
popup/item_1/text = "Blue"
popup/item_1/icon = ExtResource("2_ihk4t")
popup/item_1/id = 1
popup/item_2/text = "Green"
popup/item_2/icon = ExtResource("4_1c4a4")
popup/item_2/id = 2
popup/item_3/text = "Yellow"
popup/item_3/icon = ExtResource("5_vkg7j")
popup/item_3/id = 3
popup/item_4/text = "Brown"
popup/item_4/icon = ExtResource("6_m5cw1")
popup/item_4/id = 4
popup/item_5/text = "Orange"
popup/item_5/icon = ExtResource("7_osp55")
popup/item_5/id = 5
popup/item_6/text = "Purple"
popup/item_6/icon = ExtResource("8_f30wy")
popup/item_6/id = 6
popup/item_7/text = "Pink"
popup/item_7/icon = ExtResource("9_yay50")
popup/item_7/id = 7
